--- a/.github/workflows/ml_ci_cd.yml
+++ b/.github/workflows/ml_ci_cd.yml
@@ -9,12 +9,21 @@ on:
 jobs:
   ml_ci_cd:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python version: [3.8]
     steps:
     - uses: actions/checkout@v2
-      
-    - name: python version
+    - name: set up Python 
+      uses: actions/setup-python@v4
+      with: 
+        python-version: ${{matrix.python-version}}
+    
+    - name: list
       run: python --version
-    - name: pip install
-      run: pip install -r requirements.txt
+  #  - name: python version
+   #   run: python --version
+    #- name: pip install
+     # run: pip install -r requirements.txt
 
 
